--- a/minimax.tex
+++ b/minimax.tex
@@ -327,10 +327,10 @@ It first chooses equiprobably whether to question the chair or the agents. In th
 In the second case, it draws equiprobably among the agents whose preference is not known entirely; draws an alternative $a$ equiprobably among those involved in some incomparabilities in $\ppref_j$; and draws an alternative $b$ equiprobably among those incomparable with $a$ in $\ppref_j$.
 
 Let $(x^{*},\bar{y}, \bar{\profile}, \bar{\w})$ be the current solution of the minimax regret, where $x^{*}$ is the minimax optimal alternative and $\bar{y}, \bar{\profile}, \bar{\w}$ the corresponding adversarial choices. 
-The \strat{Pessimistic} strategy considers a set of $n + m$ candidate questions: one per agent, and one per rank \commentOC{Isn’t this $m-2$?}.
+The \strat{Pessimistic} strategy considers a set of $n + (m-2)$ candidate questions: one per agent, and one per rank (excluding the first and the last one which are known).
 The candidate questions to the agents are chosen by extending the idea of \citet{Lu2011}, that priviledge learning about the relationship of $x^*$ and $\bar{y}$ to the other alternatives if possible.
 The candidate questions to the chair are determined as in the Random strategy.
-The Pessimistic strategy selects among these $n + m$ candidate questions one that leads to minimal regret in the worst case: for each question we compute the minimax regret for the two possible answers, considering a penalty terms depending on the kind of question, and choose the best according to (quasi-)$\leximax$. \Cref{sec:appendix} provides more details.
+The Pessimistic strategy selects among these $n + m - 2$ candidate questions one that leads to minimal regret in the worst case: for each question we compute the minimax regret for the two possible answers, considering a penalty terms depending on the kind of question, and choose the best according to (quasi-)$\leximax$. \Cref{sec:appendix} provides more details.
 
 The \strat{Extended pessimistic} strategy uses the same criterion as the pessimistic strategy, but extending it to a bigger set of candidate questions, the same as those considered by the Random strategy. These candidate questions are then evaluated using the same operator as for the Pessimistic strategy.
 We use this strategy to test whether Pessimistic performs well: depending on the quality of the heuristic of the Pessimistic strategy, it might perform nearly equally well, or perhaps even better, than Extended pessimistic, while being (much) faster. Extended pessimistic is applicable only to small problem instances: its complexity is in $O(n^2 m^5)$, because we consider $O(m^2)$ questions for each agent and need for each question to compute MMR twice, whose complexity is $O(nm^3)$.
