--- a/minimax.tex
+++ b/minimax.tex
@@ -136,17 +136,7 @@ Additionally, some works address the manipulability of voting rules \citep{Elkin
 strategic behaviors \citep{Endriss2016,Lev2019,Annemieke2012}.
 
 Our approach is evaluated on small scale simulations where both the voting rule and the agent preferences are initially unknown to the system and incrementally revealed through questioning.
-We compare the effectiveness of several questioning strategies based on the current knowledge of the rule and preferences. To summarize our contributions:
-\begin{itemize}
-	\item we provide a novel mechanism for eliciting a voting rule by translating abstract questions about weights to a choice of an alternative given a concrete profile;  
-	\item we show that %in small problem sizes, %starting with zero knowledge,
-	 it is possible to reach a low regret level with a reasonable number of questions;
-	\item we present elicitation strategies that achieve good results within reasonable computation time; %for small problem sizes;
-	\item we show that for the class of rule considered, asking a few questions about the voting rule suffice to reach a low regret level;
-	\item our experiments suggest that low degree of similarity among preferences %rankings 
-	(as in impartial culture) is a more challenging setting than less varied profiles.
-\end{itemize}
-
+We compare the effectiveness of several questioning strategies based on the current knowledge of the rule and preferences. 
 \section{Social choice with partial information}
 \label{sec:background}
 We now introduce some basic concepts.
@@ -154,7 +144,7 @@ We consider a set $A$ of $m$ alternatives (products, restaurants, public project
 
 A {\em profile} $(\pref_j, j \in N)$ considers a finite subset of agents $N \subset \N$ and associates to each agent a preference order ${\pref_j}  \in \linors$, a linear order over the alternatives.
 A profile is equivalently represented by $\profile=(v_j, j \in N)$ where $v_j(x) \in \set{1, \ldots, m}$ denotes the rank of alternative $x$ in the preference order $\pref_j$. 
-A social choice function $f : \cup_{\emptyset ≠ N \subset \N} \linors^N \rightarrow \powersetz{A}$ associates to each profile a set of (tied) winners, where $\powersetz{A}$ represents the set of subsets of $A$ except for the empty set.
+A social choice function $f : \cup_{\emptyset ≠ N \subset \N} \linors^N \rightarrow \powersetz{A}$ associates to each profile a set of (tied) winners, where $\powersetz{A}$ is the powerset of $A$ excluding the empty set.
 Among the many possible social choice functions, we consider convex {\em positional scoring rules (PSRs)}. A PSR $f^{\w}$ is parameterized by a \emph{scoring vector} $\w$ associating weights $w_r \in [0, 1]$ to positions, with $1 = w_1 ≥ w_2 ≥ … ≥ w_m = 0$.
 Let $\alpha^{x}_r$ be the number of times that alternative $x$ was ranked in the $r$-th position.
 Given $\profile$ and $\w$, an alternative $x \in A$ obtains the score
@@ -170,7 +160,7 @@ An important class of PSRs is the one using convex weights \citep{Stein1994,Llam
 	\label{eq:convexity}
 	\forall r \in \{1,\ldots,m-2\}: w_r - w_{r+1} \geq w_{r+1}-w_{r+2}.
 \end{equation}
-The constraint above is a natural and common assumption, often used when aggregating rankings in sport competitions: losing ranks at the top of the ranking is more damaging than losing ranks at the bottom.
+The constraint above is a natural and common assumption, often used when aggregating rankings in sport competitions (such as F1 racing, alpine skiing world cup); losing ranks at the top  is more damaging than losing ranks at the bottom.
 Let $\W$ denote the set of such convex weight vectors.
 
 Let $\profile^* = (\pref_j^*, j \in N^*)$ and $\w^*$ denote the profile and weight vector, unknown to us, that represent the preferences of the agents in $N^*$ and of the chair. 
@@ -190,13 +180,14 @@ It is desirable in an elicitation protocol such as ours to be able to stop befor
 As a decision criterion to determine a winner, we propose to use minimax regret \citep{Savage1954}. 
 This decision criterion has been used for robust optimization under data uncertainty \citep{Kouvelis1997} as well as in decision-making with uncertain utility values \citep{Salo2001,Boutilier2006}.
 In particular, \citet{Lu2011} have adopted minimax regret for winner determination in social choice where
-the preferences of agents that are partially known, while the social choice function is known.
+the preferences of agents are partially known, while the social choice function is known.
 
 We consider the simultaneous presence of incomplete knowledge in agent preferences and in the weights of the PSR.
 We use \emph{maximum regret} to quantify the worst-case error, and let the alternatives that minimize this quantity win, giving some robustness in face of ignorance.
 Intuitively, the quality of a proposed alternative $a$ is how far $a$ is from the optimal one in the worst case, given the current knowledge.
 
-The maximum regret is considered by assuming that an adversary can both 1) extend the partial profile $\pprofile$ into a complete profile, and 2) instantiate the weights choosing among any weight vector in $\pw$, where $\pprofile$ and $\pw$ represent our knowledge so far.
+Given $\pprofile$ and $\pw$ (that represent the current knowledge about agent preferences and the PSR),
+the maximum regret is considered by assuming that an adversary can both 1) extend the partial profile $\pprofile$ into a complete profile, and 2) instantiate the weights choosing among any weight vector in $\pw$. %where $\pprofile$ and $\pw$ represent our knowledge so far.
 We formalize the notion of minimax regret in multiple steps.
 First of all, $\Regret(x, \profile, \w) = \max_{y \in A} s(y; \profile,\w) - s(x; \profile, \w)$ is the “regret” of selecting $x$ as a winner instead of choosing the optimal alternative under $\profile$ and $\w$.
 The pairwise maximum regret $\PMR(x,y;\pprofile,W) = \max_{\w \in W} \max_{\profile \in C(\pprofile)} s(y; \profile,\w) - s(x; \profile,\w)$ of $x$ relative to $y$ given the partial profile $\pprofile$ and the set of weights $W$
@@ -213,7 +204,7 @@ We note that our notion of regret gives some cardinal meaning to the scores: ins
 % Add some general remarks about using minimax regret
 
 \paragraph{Computation of minimax regret}
-Given a voting rule and a partially specified profile, \citet{Xia2008} determine necessary winners by showing constructions that attempt to maximize the score difference between a proposed winner and a chosen alternative. This reasoning was later adopted by \citet{Lu2011} who used the considerations on the worse-case completions for computing the minimax regret. 
+Given a voting rule and a partially specified profile, \citet{Xia2008} determine necessary winners by showing constructions that attempt to maximize the score difference between a proposed winner and a chosen alternative. This reasoning was later adopted by \citet{Lu2011} who used the considerations on the worst-case completions for computing the minimax regret. 
 
 In order to compute pairwise maximum regret, and therefore minimax regret, we decompose the PMR into the contributions associated to each agent by adapting this same reasoning to our setting. The context is however more challenging due to the presence of uncertainty in the weights.
 
@@ -236,19 +227,18 @@ The following propositions (with proofs in appendix) show that the procedure for
 \begin{proposition} \label{claim:rankPMR}
 	The rank of $x$ in the PMR-maximizing linear orders of agent $j$ is $\hat{v}_{j}(x) = 1+\card{A}-\card{{\pprefeq_j}(x)}$, and the rank of $y$ is $\hat{v}_{j}(y)=1+\card{{\pprefinv_j}(y)}+\card{\beta}$, where $\card{\beta} = \card{A \setminus ({\pprefeq_j}(x) \cup {\pprefinv_j}(y))}$ if $(x \pprefeq_j y)$ and $\card{\beta} = 0$ otherwise.
 \end{proposition}
-
-\begin{proposition}
+Note that in \cref{claim:rankPMR}, in the case $(x \pprefeq_j y)$, $\beta$ is the number of alternatives incomparable with both $x$ and $y$.
+\begin{proposition}\label{claim:PMR}
 	The $\PMR$ can be written as:
 	\begin{align} 
 		\PMR(x,y; \pprofile, W)  
 		& = \max_{w \in W} \sum_{j=1}^n w_{\hat{v}_j(y)} - w_{\hat{v}_j(x)} \\ 
 		& = \max_{w \in W} \sum_{r=1}^m (\hat{\alpha}_{r}^{y} - \hat{\alpha}_{r}^{x}) w_i. 
 	\end{align}
-	where $\hat{\alpha}_{r}^{y}$ (resp. $\hat{\alpha}_{r}^{x}$)  is the number of times $y$ (resp. $x$) has rank $r$ in the complete profile $\hat{\profile}$ defined in \cref{claim:rankPMR}. %\ref{claim:completion}.
+	where $\hat{\alpha}_{r}^{y}$ (resp. $\hat{\alpha}_{r}^{x}$)  is the number of times $y$ (resp. $x$) has rank $r$ in the complete profile $\hat{\profile}$ defined in \cref{claim:rankPMR}. 
 \end{proposition}
-
-(\cref{claim:rankPMR} can be understood by observing that in the case $(x \pprefeq_j y)$, $\beta$ is the number of alternatives incomparable with both $x$ and $y$.)
-The last proposition shows that PMR is linear in the weights.
+%\cref{claim:rankPMR} can be understood by observing that in the case $(x \pprefeq_j y)$, $\beta$ is the number of alternatives incomparable with both $x$ and $y$.
+\cref{claim:PMR}  shows that PMR is linear in the weights.
 %Recall that $\pw$ represents the weight vectors compatible with the preferences of the chair stated so far.
 The pairwise max regret $\PMR(x,y; \pprofile,W)$ can thus be obtained by solving the following linear program defined on the variables $w_1, …, w_m$:
 \begin{align}
@@ -257,7 +247,6 @@ The pairwise max regret $\PMR(x,y; \pprofile,W)$ can thus be obtained by solving
 \end{align}
 %Note that given our choice $w_{1}=1$ and $w_{m}=0$, there are only $m-2$ variables 
 %(we leave $w_{1}$ and $w_{m}$ in the LP just for clarity of presentation).
-
 The max regret $\MaxR(x; \pprofile, W)$ is determined by considering the pairwise regret of $x$ with all other alternatives in $A$, and the recommended alternatives are the ones with least max regret. 
 Observe that when the $\PMR$ of an alternative $x$ (against some other alternative $y$) exceeds the best MR value found so far, we do not need to further evaluate $x$. 
 This idea can be exploited using a minimax-search tree \citep{Braziunas2012}.
@@ -317,7 +306,7 @@ Thus, our task is to build a profile, given $\lambda$ and $r ≤ m-2$, in such a
 
 \paragraph{Elicitation strategies}
 We develop several strategies for simultaneous elicitation of agent preferences and of the PSR.
-While it is of course possible to first fully elicit the agent preferences and afterwards elicit weights, we want to investigate experimentally approaches that are able to recommend winning alternatives before obtaining complete knowledge of the profile or the rule.
+While it is of course possible to first fully elicit the agent preferences and afterwards elicit weights, we want to investigate approaches that are able to recommend winning alternatives before obtaining complete knowledge of the profile or the rule.
 %Indeed, it can be beneficial to split efforts asking questions to the chair and to agents, depending on which is estimated to be more informative.
 We define here the various strategies we tested experimentally. A strategy tells us, given the current partial knowledge $(\pprofile, W)$, which question to ask next.
 
@@ -330,21 +319,48 @@ Let $(x^{*},\bar{y}, \bar{\profile}, \bar{\w})$ be the current solution of the m
 The \strat{Pessimistic} strategy considers a set of $n + (m-2)$ candidate questions: one per agent, and one per rank (excluding the first and the last one which are known).
 The candidate questions to the agents are chosen by extending the idea of \citet{Lu2011}, that priviledge learning about the relationship of $x^*$ and $\bar{y}$ to the other alternatives if possible.
 The candidate questions to the chair are determined as in the Random strategy.
-The Pessimistic strategy selects among these $n + m - 2$ candidate questions one that leads to minimal regret in the worst case: for each question we compute the minimax regret for the two possible answers, considering a penalty terms depending on the kind of question, and choose the best according to (quasi-)$\leximax$. \Cref{sec:appendix} provides more details.
+The strategy selects among these $n + m - 2$ candidate questions one that leads to minimal regret in the worst case: for each question we compute the minimax regret for the two possible answers, considering a penalty terms depending on the kind of question, and choose the best according to (quasi-)$\leximax$. %\Cref{sec:appendix} provides more details.
+
+	Given $j \in N^*$, if $x^*$ and $\bar{y}$ are incomparable in $\ppref_j$, the candidate question concerns the pair $(x^*, \bar{y})$, otherwise, %the candidate question
+	it concerns the pair $(x^*, z)$ for some $z$ incomparable to $x^*$ (randomly chosen), or if none such $z$ exist, the pair $(\bar{y}, z)$ for some $z$ incomparable to $\bar{y}$, or, if both $x^*$ and $\bar{y}$ are comparable to every alternatives in $\ppref_j$, any incomparable pair is picked at random. 
+%Responses to questions involving $x^*$ or $\bar{y}$ constrain the ability of the adversary to complete the profile in such manner, possibly reducing minimax regret.
+	Once having selected $n + m - 2$ candidate questions, the Pessimistic strategy selects the one that leads to minimal regret in the worst case.
+	%, considering both possible answers to the question, and with penalty terms depending on the kind of question. To define this comparison precisely, 
+	Assume that a question $q_1$ has type $t_1$ (being “chair” or “agent”), and leads to the new knowledge states $(\pprofile_1, W_1)$ if answered positively and $(\pprofile'_1, W'_1)$ if the answer is negative. 
+	Define $R^{\max}_1 = \max\set{\MMR(\pprofile_1, W_1), \MMR(\pprofile'_1, W'_1)}$
+	and $R^{\min}_1 = \min\set{\MMR(\pprofile_1, W_1), \MMR(\pprofile'_1, W'_1)} \epsilon_{t} + \epsilon'_{t}$.
+	%If $(\pprofile_1, W_1) ≥ (\pprofile'_1, W'_1)$, define $\MMR^{\max} = \MMR(\pprofile_1, W_1)$ and $\MMR^{\min} = \MMR(\pprofile'_1, W'_1)$; otherwise, define $\MMR^{\max} = \MMR(\pprofile'_1, W'_1)$ and $\MMR^{\min} = \MMR(\pprofile_1, W_1)$.
+	% and and $(\pprofile^\min_2, W^\min_2)$. numbering them so that $\MMR(\pprofile_1, W_1) ≥ \MMR(\pprofile_2, W_2)$. Then the badness of the question in the worst case is:
+	The terms $\epsilon_t$ and $\epsilon'_{t}$ are real numbers associated to the type $t$ of question; these parameters are determined experimentally and used to fine control the choice of the question type.
+	Define similarly $t_2$, $R^{\max}_2$ and $R^{\min}_2$ for  $q_2$.
+	%We are now faced with the problem of aggregating these values in order to compare the informative values of the candidate questions.  \footnote{We adopt a pessimistic approach, reported to perform better than optimistic aggregation \citep{Cailloux2014}, although Our experiments in this context suggested a weak impact of that choice on the performance of the strategy.}
+	%To avoid the absorption property of the max, we adopt $\leximax$ as an aggregator.
+	Pessimistic considers question $q_1$ to be better  than $q_2$ iff $R^{\max}_1 < R^{\max}_2 \text{ or } [R^{\max}_1 = R^{\max}_2 \text{ and } R^{\min}_1 < R^{\min}_2]$.
+	%This comparison gives a way of picking questions among a set of possible questions, by picking one that minimizes this approximate measure of minimax regret {\em a posteriori}. 
+	%The motivation for using this operator lies in 
+	In other words if the maximal {\em a posteriori} MMR of two questions are (nearly) equal, then it considers the (penalized) minimal MMR values, preferring the question with the lowest value.\footnote{In our simulations the parameters for the Pessimistic and Extended pessimistic are set to $\epsilon_{\text{chair}} = 1.1$, $\epsilon'_{\text{chair}} = 10^{-6}$, $\epsilon_{\text{agent}} = 1.0$ and $\epsilon'_{\text{agent}} = 0$.}
+	%(Technically, instead of applying a pure lexicographic aggregation, which is very sensitive to small errors due to floating-point computations, we apply a weighted sum between the maximal and the penalized minimal MMR values, with a predominant weight given to the maximal one, several order of magnitudes higher than the weight given to the penalized minimal MMR.)
+
+
 
 The \strat{Extended pessimistic} strategy uses the same criterion as the pessimistic strategy, but extending it to a bigger set of candidate questions, the same as those considered by the Random strategy. These candidate questions are then evaluated using the same operator as for the Pessimistic strategy.
-We use this strategy to test whether Pessimistic performs well: depending on the quality of the heuristic of the Pessimistic strategy, it might perform nearly equally well, or perhaps even better, than Extended pessimistic, while being (much) faster. Extended pessimistic is applicable only to small problem instances: its complexity is in $O(n^2 m^5)$, because we consider $O(m^2)$ questions for each agent and need for each question to compute MMR twice, whose complexity is $O(nm^3)$.
+%We use this strategy to test whether Pessimistic performs well: depending on the quality of the heuristic of the Pessimistic strategy, it might perform nearly equally well, or perhaps even better, than Extended pessimistic, while being (much) faster. 
+Extended pessimistic is applicable only to small problem instances: its complexity is in $O(n^2 m^5)$, because we consider $O(m^2)$ questions for each agent and need for each question to compute MMR twice, whose complexity is $O(nm^3)$.
 
-The \strat{Two phases} strategy is developed in order to investigate the effect of varying the proportion of questions asked to agents and to the chair, and compare the performance of asking questions to the chair first or to the agents first. It is parameterized by $q_c$, a value indicating the number of questions that must be asked to the chair.
+The \strat{Two phases} strategy is developed in order to investigate the effect of varying the proportion of questions of the two types, %asked to agents and to the chair, %and to compare the performance
+when asking all questions to the chair at the beginning or at the end.
+%first or to the agents first. 
+It is parameterized by $q_c$,  the number of questions to be asked to the chair.
 The \strat{Two phases-ca} variant first asks $q_c$ questions to the chair, then $k - q_c$ questions to the agents, using in both cases Pessimistic to select the specific questions; whereas the \strat{Two phases-ac} variant starts with $k - q_c$ questions to the agents, then questions the chair. 
 %Note that when asking first only questions to the chair, if the obtained knowledge approximates well the scoring vector, then in the second part of the elicitation we fall into the more classical setting of incompleteness of preferences assuming a known voting rule. 
 %And vice-versa when asking first questions to the agents, the second part of the elicitation is similar to the setting of incompletely specified scoring rule. 
 %This strategy also permits to simulate the current state of the art when considering incomplete preferences. By asking enough questions to the chair we can reduce our problem into a well studied one of incompleteness of preferences knowing the voting rule. Similarly, if we invert to whom ask questions first, we fall instead in an already studied case of uncertainty of the voting rule with a known complete profile. 
 
-Finally, the \strat{Elitist} strategy aims at uncovering as quickly as possible the top alternative of each agent. It asks $m - 1$ questions to each agent in turn. 
-Given an agent to query $j$, it asks about an alternative currently undominated in $\ppref_j$ and any alternative that is currently incomparable to this alternative. Thus, the top alternative in the ranking of $j$ will be known after having asked exactly $m-1$ questions to $j$.
-After having asked $n (m-1)$ questions to the agents, it questions the chair only, using the same approach as the Pessimistic strategy.
-This strategy can be expected to perform well when the chair assigns a large weight to the first rank, as compared to the other ranks. It will be useful to further challenge the Pessimistic strategy, which is not specifically tailored to such a situation.
+Finally, the \strat{Elitist} strategy aims at uncovering as quickly as possible the top alternatives of all agents. 
+%It asks $m - 1$ questions to each agent in turn. 
+For any agent $j$, it asks to compare an alternative currently undominated in $\ppref_j$ with one that is currently incomparable. Thus, the top alternative for $j$ will be known after having asked exactly $m-1$ questions to $j$.
+After having asked $n (m-1)$ questions to the agents, it questions the chair only, using the same approach as Pessimistic.
+This strategy can be expected to perform well when the chair assigns a large weight to the first rank, as compared to the other ranks. It is used to further challenge Pessimistic, which is not specifically tailored to such a situation.
 
 %\item {\em Volumetric} strategy: chooses an agent $i$ and a query that maximizes the number of new pairwise preferences revealed given the worst response.
 
@@ -357,10 +373,21 @@ Given a problem size $(m, n)$, a number of questions $k$ and a strategy to test,
 We start with empty knowledge ($\pprofile = \emptyset, W = \W$) about the preference orderings of the agents and the weight differences favored by the chair. We obtain the first question to be asked using the strategy under test. We then use the oracle to answer the question and update the system's knowledge, which is thus used to obtain the next question. This is repeated until $k$ answers have been obtained, computing the resulting MMR values along the way for various values of $k$. We repeat this whole experiment a variable number of times, for a given $(m, n, k)$, and report the average resulting MMR and standard deviation \textit{sd}. The sizes of the considered scenarios are comparable to the ones used by \citet{Cailloux2014}. 
 
 The oracle is built as follows. 
-For the real preferences, we used the following data sets from \href{https://www.preflib.org/}{PrefLib} \citep{PrefLib}. \textit{T Shirt}: $m = 11$ tee shirt designs voted by $n = 30$ members of the Optimization Research Group at NICTA; \textit{AGH Course Selection}: $m = 9$ courses evaluated by $n = 146$ students of the AGH University; and \emph{Skate}: $m = 14$ skaters evaluated by $n = 9$ judges at the Euros Pairs Short Program.
+For the real preferences, we used three datasets from \href{https://www.preflib.org/}{PrefLib} \citep{PrefLib}:\textit{T-Shirt} (researchers voted on tee shirt designs; $m \!=\! 11, n \!=\! 30$),
+\textit{Courses}  (students voted on courses; $m \!=\! 9, n \!=\! 146$)
+and \emph{Skate} (judges vote on skaters at the Euros Pairs Short Program; $m \!=\! 14, n \!=\! 9$).
+% tee shirt designs voted by 
+%$n \!=\! 30$ 
+%members of the Optimization Research Group at NICTA;
+% \textit{AGH Course Selection}: $m \!=\! 9$ courses evaluated by $n = 146$ students 
+%of the AGH University; 
+%and \emph{Skate}: $m \!=\! 14$ skaters evaluated by $n \!=\! 9$ judges at the Euros Pairs Short Program.
 %We want to focus on the most critical setting, as there is a wide variety of possible situations to test in such experiments.
-For the generated preferences, we follow an Impartial Culture (IC) assumption: the linear order of each agent is drawn independently and all have the same probability of appearing. We adopt IC because it is a more challenging situation: as can be expected intuitively (and shown in \cref{fig:linearity}), the number of questions to be asked decrease with less varied profiles. 
-To generate the weights of the scoring rule, we first draw $m - 1$ numbers uniformly at random (in the interval $\intvl{0,1}$ representing weight ``differences''), normalize and sort them; a sequence of convex decreasing weight is then obtained by a decumulative sum.
+For the synthetic datasets, we follow an Impartial Culture (IC) assumption: the linear order of each agent is drawn i.i.d. uniformly.
+%independently and all have the same probability of appearing. 
+We believe IC to be a challenging situation and expect the number of questions to ask, in order to reach a certain level of regret, to decrease with less varied profiles.
+%We adopt IC because it is a more challenging situation: as can be expected intuitively , the number of questions to be asked decrease with less varied profiles. 
+To generate the weights of the scoring rule, we first draw $m \!-\! 1$ numbers uniformly at random (in the interval $\intvl{0,1}$ representing weight ``differences''), normalize and sort them; a sequence of convex decreasing weight is then obtained by a decumulative sum.
 
 \begin{figure}
 	\caption{Average MMR in problems of size $(5, 10)$ after $k$ questions.}
@@ -408,7 +435,7 @@ To generate the weights of the scoring rule, we first draw $m - 1$ numbers unifo
 %\end{figure}
 \sisetup{table-number-alignment = center, table-figures-integer=2, table-figures-decimal=1, table-auto-round}
 \begin{table}
-	\caption{Average MMR in problems of size $(10, 20)$ and geometric weights after $k$ questions.}
+	\caption{Average MMR in problems of size $(10, 20)$ after $k$ questions assuming geometric weights.}
 	\label{tab:geometricWeights}
 	\begin{tabular}{S[table-figures-integer=3, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left, table-figures-integer=1]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left, table-figures-integer=1]}
 		\toprule
@@ -437,11 +464,13 @@ We also compared the Pessimistic strategy against Elitist in a situation specifi
 \paragraph{Evaluation of Pessimistic Strategy}
 \label{sec:lowRegret}
 Our next set of experiments evaluate the Pessimistic strategy in absolute terms. 
-We first wonder how many questions should be asked in order to reach a low regret level. We consider a low level to be a tenth of the number of agents: such a regret is equivalent to the difference of score of an alternative $x$ that results from switching from a profile $P$ to a profile $P'$ where ten percent of the agents rank $x$ last instead of first.
+We first wonder how many questions should be asked in order to reach low regret. 
+For the scope of the experiment we consider a ``low level'' to be a tenth of the number of agents: such a regret is equivalent to the difference of score of an alternative $x$ that results from switching from a profile $P$ to a profile $P'$ where ten percent of the agents rank $x$ last instead of first.
 The results for various sizes are displayed in \cref{tab:lowRegret}. 
 
 \commentBN{Replace the following paragraph with real stats on the distribution of questions.}
-For the experiments we performed, we see that the number of questions required to reach a low regret level grows approximately linearly with the number of agents and grows less fast than the square of the number of alternatives. Averaging these data by category of value for $m$, and assuming no questions get asked to the chair, we see that in order to reach a low regret level, each agent will have to answer $5.6$ questions for $m = 5$, $17.2$ questions for $m = 10$ and $27.1$ questions for $m = 15$. These numbers have to be contrasted with the estimated number of questions required to elicit the full preference of an agent which are $6.6$ for $m=5$, $24.8$ for $m=10$ and $48.4$ for $m=15$. To obtain these data, we constrained the Pessimistic strategy to ask questions to the agents only, and ran it on a single agent problem, with various values for $m$.
+%For the experiments we performed, we see that the number of questions required to reach a low regret level grows approximately linearly with the number of agents and grows less fast than the square of the number of alternatives. 
+Averaging these data by category of value for $m$, and assuming no questions get asked to the chair, we see that in order to reach a low regret level, each agent will have to answer $5.6$ questions for $m = 5$, $17.2$ questions for $m = 10$ and $27.1$ questions for $m = 15$. These numbers have to be contrasted with the estimated number of questions required to elicit the full preference of an agent which are $6.6$ for $m=5$, $24.8$ for $m=10$ and $48.4$ for $m=15$. To obtain these data, we constrained the Pessimistic strategy to ask questions to the agents only, and ran it on a single agent problem, with various values for $m$.
 
 \begin{table}[ht]
 	\caption{Number of questions needed by Pessimistic strategy to reach an MMR of $\frac{n}{10}$ (represented by $k_{\MMR}$), by size.}
@@ -543,14 +572,16 @@ For the experiments we performed, we see that the number of questions required t
 %that, on average, halving the number of questions will only reduce the gain in regret by less than half. %\commentBN{Reviewer: Halving the number of questions reduces the regret by more than 50\%.}
 %At the start of the elicitation, the space of uncertainty is so large that the adversary can attain the maximum possible value of regret; multiple answers are needed to constrain her enough for the MMR to start decreasing. When approaching optimality, the pace of MMR reduction decreases.
 
-In \cref{fig:linearity} we can also observe, as expected, that given a problem size the number of questions needed to reach a given MMR is lower when considering a real data set than a IC generated profile. \commentBN{Add the following:}
-By looking at the data we observe that:
-\begin{itemize}
-	\item \textit{Skate} - the top-2 alternatives are the same for all agents, and 8 out of 9 agents rank the same alternative at position 3;
-	\item \textit{AGH} - all agents rank the same alternative at the top position, different group of agents share the same preference rankings;
-	\item \textit{T Shirt} - the alternatives are evenly distributed in the preference rankings.
-\end{itemize}
-The experiments suggest that high degree of similarity in the preference rankings helps reducing the regret faster.
+In \cref{fig:linearity} we can also observe, as expected, that given a problem size the number of questions needed to reach a given MMR is lower when considering real datasets rather than a synthetic profile generated according to IC. \commentBN{Add the following:}
+Indeed, in the Skate dataset the top-2 alternatives are the same for all agents, and 8 out of 9 agents rank the same alternative at position 3; in Courses  all agents rank the same alternative at the top position,
+while in \textit{T-Shirt}  the alternatives are evenly distributed in the preference rankings.
+%By looking at the data we observe that:
+%\begin{itemize}
+%	\item \textit{Skate} - the top-2 alternatives are the same for all agents, and 8 out of 9 agents rank the same alternative at position 3;
+%	\item \textit{AGH} - all agents rank the same alternative at the top position, different group of agents share the same preference rankings;
+%	\item \textit{T Shirt} - the alternatives are evenly distributed in the preference rankings.
+%\end{itemize}
+%The experiments suggest that high degree of similarity in the preference rankings helps reducing the regret faster.
 % do less harm than halving the gain in regret, on average.
 
 %\subsection{Value of information comparison}
@@ -576,12 +607,22 @@ The experiments suggest that high degree of similarity in the preference ranking
 		\bottomrule
 	\end{tabular}
 \end{table}
+The experiments so far let the strategy target its questions unrestrictively, leaving open the possibility of questioning either the chair or an agent at each step. One may wonder what is lost in terms of regret by asking different proportions of questions to the chair and the agents. Such restrictions may be useful because of (partial) unavailability of the chair, or because the estimated cognitive costs may differ sensibly. %, as these types of questions differ in nature. 
 
-The experiments so far let the strategy target its questions unrestrictively, leaving open the possibility of questioning either the chair or an agent at each step. One may wonder what is lost in terms of regret by asking different proportions of questions to the chair and the agents. Such restrictions may be useful because of (partial) unavailability of the chair, or because the estimated cognitive costs may differ sensibly, as these types of questions differ in nature. 
-\Cref{tab:twoP400} shows the MMR value reached in problems of size $m = 10, n = 20$ after $400$ questions, using the Two phases strategy, in the “ca” (chair then agents) and in the “ac” (agents then chair) variants. These numbers are to be compared with the MMR value reached after 400 questions with the Pessimistic strategy (displayed in \cref{fig:linearity}), which is $0.6$.
-The Pessimistic strategy asks on average $48$ questions to the chair in this setting.
-
+\Cref{tab:twoP400} shows the MMR value reached in problems of size $m = 10, n = 20$ after $400$ questions, using the Two phases strategy, in the “ca” (chair then agents) and in the “ac” (agents then chair) variants. These numbers are to be compared with the MMR value reached after 400 questions with the Pessimistic strategy (displayed in \cref{fig:linearity}), which is $0.6$; the Pessimistic strategy asks on average $48$ questions to the chair in this setting.
 These numbers highlight that it is possible to obtain a good-quality recommendation while knowing only that the voting rule is a scoring rule and that the weights are convex, which is our basic hypothesis (corresponding to the line $q_c = 0$, where no question is asked to the chair).
+
+We summarize the main observation  from the experiments:
+\begin{itemize}
+%	\item we provide a novel mechanism for eliciting a voting rule by translating abstract questions about weights to a choice of an alternative given a concrete profile;  
+	\item we showed that with our elicitation method %in small problem sizes, %starting with zero knowledge,
+	 it is possible to reach low regret with a reasonable number of questions;
+	\item the elicitation strategies that we provide, in particular Pessimistic, achieve good results within reasonable computation time; %for small problem sizes;
+	\item we showed that for the class of rule considered, asking a few questions to the chair suffice to reach  low regret;
+	\item our experiments suggest that low degree of similarity among preferences %rankings 
+	(as in impartial culture) is a more challenging setting than less varied profiles.
+\end{itemize}
+
 
 \section{Conclusions}  
 \label{sec:conclusions}
@@ -598,7 +639,7 @@ As part of our contribution, a general open-source library, allowing to reproduc
 %We mention some directions for future works.
 Further development of elicitation strategies, considering alternative heuristics, is an important direction. 
 Second, elicitation could be extended to voting rules beyond scoring rules. 
-Finally, an important direction of extension aims at studying how to elicit preferences while restraining to concrete and easy questions.
+Finally, an important direction of research  aims at eliciting preferences while restraining to concrete and easy questions.
 % Acknowledgments: We thank the reviewers for comments helping to improve the paper. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
